Update build from Maven to Gradle and upgrade to Spring Boot 2.3.0.M3